--- a/samples/HelloData/AndroidManifest.xml
+++ b/samples/HelloData/AndroidManifest.xml
@@ -8,13 +8,12 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
     
-    <uses-permission android:name="android.permission.INTERNET" />
-    
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".HelloDataActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
