--- a/samples/HelloContent/AndroidManifest.xml
+++ b/samples/HelloContent/AndroidManifest.xml
@@ -25,7 +25,7 @@
 <!--         </activity> -->
 
         <activity
-            android:name=".HelloContentActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
