--- a/samples/HelloProvider/AndroidManifest.xml
+++ b/samples/HelloProvider/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name" >
 
         <activity
-            android:name="aad.app.hello.provider.HelloProviderActivity"
+            android:name="aad.app.hello.provider.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,8 @@
 
         <provider
             android:name="aad.app.hello.provider.providers.BooksContentProvider"
-            android:authorities="aad.app.hello.provider.providers.BooksContentProvider" />
+            android:authorities="aad.app.hello.provider.providers.BooksContentProvider"
+            android:exported="true" />
     </application>
 
 </manifest>
