--- a/samples/HelloService/AndroidManifest.xml
+++ b/samples/HelloService/AndroidManifest.xml
@@ -11,19 +11,19 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <receiver android:name=".receivers.GoodbyeToastReceiver" >
             <intent-filter>
-                <action android:name="aad.app.e05.GOODBYE"></action>
+                <action android:name="aad.app.hello.service.GOODBYE"></action>
             </intent-filter>
         </receiver>
         
