--- a/samples/HelloContent/AndroidManifest.xml
+++ b/samples/HelloContent/AndroidManifest.xml
@@ -15,22 +15,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
                 
-<!--         <activity -->
-<!--             android:name=".ContactContentActivity" > -->
-<!--             <intent-filter > -->
-<!--                 <action android:name="android.intent.action.MAIN" /> -->
-
-<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
-<!--             </intent-filter> -->
-<!--         </activity> -->
-
         <activity
-            android:name=".MainActivity" >
+            android:name=".ContactContentActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--         <activity -->
+<!--             android:name=".MainActivity" > -->
+<!--             <intent-filter > -->
+<!--                 <action android:name="android.intent.action.MAIN" /> -->
+<!--                 <category android:name="android.intent.category.LAUNCHER" /> -->
+<!--             </intent-filter> -->
+<!--         </activity> -->
         
     </application>
 
