--- a/samples/HelloService/AndroidManifest.xml
+++ b/samples/HelloService/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name" >
         
         <activity
-            android:name=".MainActivity"
+            android:name="aad.app.hello.service.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".receivers.GoodbyeToastReceiver" >
+        <receiver android:name="aad.app.hello.service.receivers.GoodbyeToastReceiver" >
             <intent-filter>
                 <action android:name="aad.app.hello.service.GOODBYE"></action>
             </intent-filter>
