--- a/samples/HelloTest/tests/AndroidManifest.xml
+++ b/samples/HelloTest/tests/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="aad.app.c27.test"
+    package="aad.app.hello.test.test"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,12 +8,10 @@
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="aad.app.c27" 
+        android:targetPackage="aad.app.hello.test" 
         android:handleProfiling="true"/>
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+    <application>
         <uses-library android:name="android.test.runner" />
     </application>
 
