--- a/samples/HelloLoader/AndroidManifest.xml
+++ b/samples/HelloLoader/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name" >
         
         <activity
-            android:name="aad.app.hello.loader.HelloLoader"
+            android:name="MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
