--- a/samples/HelloComponent/AndroidManifest.xml
+++ b/samples/HelloComponent/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="aad.app.hello.component.HelloComponentActivity"
+            android:name="aad.app.hello.component.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
