--- a/exercises/ExerciseDrawing/AndroidManifest.xml
+++ b/exercises/ExerciseDrawing/AndroidManifest.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="aad.app.hello.game"
+    package="aad.app.exercise.drawing"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.INTERNET" />
+        android:targetSdkVersion="19" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".MainActivity">
-            <intent-filter >
+            android:name="aad.app.exercise.drawing.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity
-            android:name=".GameActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        </activity>
+
     </application>
 
 </manifest>
