--- a/samples/HelloSearch/AndroidManifest.xml
+++ b/samples/HelloSearch/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".HelloSearchActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             
             <intent-filter>
