--- a/samples/HelloBluetooth/AndroidManifest.xml
+++ b/samples/HelloBluetooth/AndroidManifest.xml
@@ -19,7 +19,7 @@
         
         <activity
             android:label="@string/app_name"
-            android:name=".HelloBluetoothActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
