--- a/samples/HelloNetwork/AndroidManifest.xml
+++ b/samples/HelloNetwork/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name" >
         
         <activity
-            android:name="aad.app.hello.network.HelloNetworkActivity"
+            android:name="aad.app.hello.network.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="aad.app.hello.network.HelloNetworkActivity$ConnectivityChangeReceiver" >
+        <receiver android:name="aad.app.hello.network.MainActivity$ConnectivityChangeReceiver" >
         	<intent-filter>
             	<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
         	</intent-filter>
