--- a/exercises/ExerciseTags/AndroidManifest.xml
+++ b/exercises/ExerciseTags/AndroidManifest.xml
@@ -8,20 +8,44 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.NFC" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <!-- TODO 2.1 Add an NDEF_DISCOVERED IntentFilter for MainActivity -->
         <activity
             android:name="aad.app.exercise.tags.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/main" >
+            
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="main"
+                    android:scheme="xs" />
             </intent-filter>
+            
         </activity>
+        
+        <!-- TODO 2.2 Add an NDEF_DISCOVERED IntentFilter for TestActivity -->
+        <activity
+            android:name="aad.app.exercise.tags.TestActivity"
+            android:label="@string/test" >
 
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="test"
+                    android:scheme="xs" />
+            </intent-filter>
+            
+        </activity>
+        
     </application>
 
 </manifest>
