--- a/samples/HelloHTTP/AndroidManifest.xml
+++ b/samples/HelloHTTP/AndroidManifest.xml
@@ -14,10 +14,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".HelloHTTPActivity" >
+            android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
