Update to split apart HelloService Sample
Update to HelloService to move Remote functionality to
HelloServiceRemote with minor updates to HelloBluetooth and
HelloContent.

--- a/samples/HelloContent/AndroidManifest.xml
+++ b/samples/HelloContent/AndroidManifest.xml
@@ -19,11 +19,12 @@
             android:name=".ContactContentActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- For Use with HelloProvider -->
+        
 <!--         <activity -->
 <!--             android:name=".MainActivity" > -->
 <!--             <intent-filter > -->
