--- a/samples/HelloFacebook/AndroidManifest.xml
+++ b/samples/HelloFacebook/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name" >
         
         <!-- Required for Facebook -->
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+		<!-- <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/> -->
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id_test"/>
         <activity android:name="com.facebook.LoginActivity"/>
         
         <service
@@ -42,17 +43,18 @@
             android:exported="true"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name="aad.app.hello.facebook.PreferencesActivity"
             android:exported="true"
             android:label="@string/app_name" >
         </activity>
+        
         <activity 
             android:label="@string/app_name"
             android:name=".HelloFacebookActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
