--- a/samples/HelloFacebook/project.properties
+++ b/samples/HelloFacebook/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=../../../facebook-android-sdk-3.0.1/facebook
+android.library.reference.1=../../../../../../../../SDK/facebook-android-sdk-3.14/facebook
