--- a/samples/HelloMap/AndroidManifest.xml
+++ b/samples/HelloMap/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <uses-library android:name="com.google.android.maps" />
 
         <meta-data
+    		android:name="com.google.android.gms.version"
+    		android:value="@integer/google_play_services_version" />
+        
+        <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/api_key" />
 
@@ -39,7 +43,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
