--- a/samples/HelloMap/project.properties
+++ b/samples/HelloMap/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:14
-android.library.reference.1=../../../../../../../../../../SDK/android-sdk-windows/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=../../../../../../../../SDK/adt-bundle-mac-x86_64-20130917/sdk/extras/google/google_play_services/libproject/google-play-services_lib
