--- a/samples/HelloYouTube/AndroidManifest.xml
+++ b/samples/HelloYouTube/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     
     <application
         android:icon="@drawable/ic_launcher"
