--- a/samples/HelloMap/AndroidManifest.xml
+++ b/samples/HelloMap/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> -->
 
     <permission
         android:name="aad.app.hello.map.permission.MAPS_RECEIVE"
@@ -28,6 +29,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
         <uses-library android:name="com.google.android.maps" />
 
         <meta-data
@@ -46,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
     </application>
 
 </manifest>
